--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 *.sqlite3
 # C extensions
 *.so
-
+*.pyc
 # Distribution / packaging
 .Python
 env/
@@ -79,6 +79,7 @@ celerybeat-schedule
 
 # dotenv
 .env
+.test.env
 
 # virtualenv
 venv/
@@ -182,4 +183,4 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # idea folder, uncomment if you don't need it
-# .idea
+.idea/
