--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
+
 ; pythonpath = . app
 DJANGO_SETTINGS_MODULE = app.settings
-
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
+env_files =
+    .test.env
